// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`in-sync-function.js [espree] format 1`] = `
"Cannot use keyword 'await' outside an async function (1:25)
> 1 | function foo(promise) { await promise; }
    |                         ^
  2 |
  3 | function a() {
  4 |   return await 1"
`;

exports[`in-sync-function.js [flow] format 1`] = `
"Unexpected identifier, expected the end of an expression statement (\`;\`) (1:31)
> 1 | function foo(promise) { await promise; }
    |                               ^^^^^^^
  2 |
  3 | function a() {
  4 |   return await 1"
`;

exports[`in-sync-function.js [meriyah] format 1`] = `
"[1:29]: 'Await' may not be used as an identifier in this context (1:29)
> 1 | function foo(promise) { await promise; }
    |                             ^
  2 |
  3 | function a() {
  4 |   return await 1"
`;

exports[`in-sync-function.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
function foo(promise) { await promise; }

function a() {
  return await 1
}

() => { await x };

function foo() {
  await
  foo;
}

=====================================output=====================================
function foo(promise) {
  await promise;
}

function a() {
  return await 1;
}

() => {
  await x;
};

function foo() {
  await;
  foo;
}

================================================================================
`;

exports[`out-of-function.js [espree] format 1`] = `
"Unexpected token = (2:5)
  1 | export class C {
> 2 |   p = await 0;
    |     ^
  3 | }
  4 |
  5 | await 0;"
`;

exports[`out-of-function.js [flow] format 1`] = `
"Unexpected number, expected the end of an expression statement (\`;\`) (5:7)
  3 | }
  4 |
> 5 | await 0;
    |       ^
  6 |"
`;

exports[`out-of-function.js [meriyah] format 1`] = `
"[2:11]: 'Await' may not be used as an identifier in this context (2:11)
  1 | export class C {
> 2 |   p = await 0;
    |           ^
  3 | }
  4 |
  5 | await 0;"
`;

exports[`out-of-function.js format 1`] = `
====================================options=====================================
parsers: ["babel", "flow", "typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export class C {
  p = await 0;
}

await 0;

=====================================output=====================================
export class C {
  p = await 0;
}

await 0;

================================================================================
`;
